Fixed some critical merge-related-errors(html)

--- a/WebApplication1/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/Index.cshtml
@@ -59,14 +59,14 @@
     </div>
 
     <h1 id="DocumentHeader">Apirix IDE Prototype</h1>
-<pre id="editor" style="height:300px;margin:0px; width:100%;border:none;">
-
+<pre id="editor" style="height:300px;margin:0; width:100%;border:none;">
+</pre>
 <script src="~/Scripts/jquery-1.10.2.js"></script>
 
     <h1 id="DocumentHeader">IDE Prototype</h1>
-    <pre id="editor" style="height:300px">
+    
        
-</pre>
+
 
     <div id="term" ></div>
 
