--- a/WebApplication1/WebApplication1/Views/Home/About.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/About.cshtml
@@ -19,7 +19,7 @@
         <!-- Displays the editor in full screen -->
         <div onclick="full()" id="f11" class="clickdivf11f11r">FullScreen</div>
         <!-- Reverts the editor into window mode -->
-        <div onclick="revert()" id="f11r" class="clickdivf11f11r">Window Mode</div>
+        <div onclick="revert()" id="f11r" class="clickdivf11f11r">Window mode</div>
         <!-- Background color -->
         <div class="dropdown">
             <p onclick="myFunction()" class="dropbtn">Background</p>
@@ -52,7 +52,7 @@
         </div>
         <!-- Select different editor themes -->
         <div class="dropdown">
-            <p onclick="theme()" class="dropbtn">Select Theme</p>
+            <p onclick="theme()" class="dropbtn">Select theme</p>
             <div id="myDropdownTheme" class="dropdown-content">
                 <p class="p-aligncenter" onclick="monokai()">monokai</p>
                 <p class="p-aligncenter" onclick="iplastic()">iplastic</p>
