Updating indexes and changed lines of code, commenting, merged together 2 .js documents, structure in site.css first tags, second classes and last ids.

--- a/WebApplication1/WebApplication1/Views/Home/About.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/About.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Editor";
+    ViewBag.Title = "Editor prototype";
 }
 
 <!DOCTYPE html>
@@ -7,14 +7,17 @@
 <html lang="en">
 
 <head>
+    <!-- Viewsport, desctription, ignore default mobile stylings, author -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta name="description" content="Code editor">
     <meta name="format-detection" content="telephone=no" />
-    <meta name="author" content="The Fantastic 4 Kalmar version">
+    <meta name="author" content="The Fantastic 4 Kalmar style">
     <meta charset="UTF-8">
-    <title>ACE Autocompletion demo</title>
-    <link rel="stylesheet" href="../../Content/Site.css" />
-    <link rel="stylesheet" href="../../Content/Site.css" />
+    <!-- Title of the webbsite -->
+    <title>Apirix editor prototype</title>
+    <!-- Cascading Style sheets -->
+    <link rel="stylesheet" href="../../Content/bootstrap.css" />
+    <link rel="stylesheet" href="../../Content/bootstrap.min.css" />
     <link rel="stylesheet" href="../../Content/Site.css" />
 </head>
 
@@ -109,8 +112,6 @@
     <script src="~/ace/ext-language_tools.js"></script>
     <!-- load external js file: document functions -->
     <script src="~/no-fonflikt/doc.js"></script>
-    <!-- load external js file: document functions -->
-    <script src="~/Scripts/documentjs.js"></script>
 </body>
 
 </html>
