--- a/WebApplication1/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/Index.cshtml
@@ -8,10 +8,12 @@
 <head>
     <meta charset="UTF-8">
     <title>ACE Autocompletion demo</title>
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
     <link rel="stylesheet" href="../../Content/Site.css" />
     <link rel="stylesheet" href="../../Content/bootstrap.css" />
     <link rel="stylesheet" href="../../Content/bootstrap.min.css" />
     <link href="~/mycss/StyleSheet1.css" rel="stylesheet" />
+    
 </head>
 
     <div id="fullwidth1pxheight">
@@ -47,20 +49,27 @@
     <h1 id="DocumentHeader">Apirix IDE Prototype</h1>
 
 
-<div class="container" style="width:100%;" >
- 
-    <div class="well" style="margin-bottom:0px; padding:0px;">
-
-        <a href="#" id="btnAdd"><i class="icon-plus-sign-alt"></i> Add Tab</a>
-        <a href="#" id="btnRemove"><i class="icon-plus-sign-alt"></i> Remove Tab</a>
-        <br><br>
-        <ul class="nav nav-tabs" id="tabs" style="margin-bottom:0px;">
-            <li class="active"><a href="#tab1">Tab 1</a></li>
-        </ul>
 
 
-    </div>
+<div id="dialog" title="Tab data">
+    <form>
+        <fieldset class="ui-helper-reset">
+            <label for="tab_title">Filetype</label>
+            <input type="text" name="tab_title" id="tab_title" placeholder="javascript,c# or html" class="ui-widget-content ui-corner-all">
+
+        </fieldset>
+    </form>
 </div>
+
+<button id="add_tab">Add Tab</button>
+
+<div id="tabs">
+    <ul id="sortable">
+        <li><a href="#tabs-1">Tab 1</a> <span class="ui-icon ui-icon-close" role="presentation">Remove Tab</span></li>
+    </ul>
+    
+</div>
+
 
 <pre id="editor" style="height:400px;margin:0px; width:100%;border:none;">
        
@@ -69,18 +78,15 @@
     <div id="term" ></div>
 
         <script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
-
         <script src="~/ace/ace.js"></script>
         <script src="~/ace/ext-language_tools.js"></script>
-
         <script src="~/myjs/terminal.js"></script>
-
         <script src="~/myjs/header.js"></script>
         <script src="~/myjs/tabs.js"></script>
-
-
-<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
+        <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+        <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+        <script src="~/myjs/tabs.js"></script>
 
     <script>
     var editor = ace.edit("editor");
@@ -95,123 +101,8 @@
 
     </script>
 
-    <script>
-
-    var myTerminal = new Terminal()
-
-    myTerminal.print("********************** APIRIX Terminal V2 **********************")
-    myTerminal.print("The commands are: | date | creator | errorlog | theme | clear |");
-
-    var lock = true;
-
-    function myfunction() {
-
-        myTerminal.input("",function (userInput) {
-            var currentime = new Date();
-
-            if (userInput == "date") {
-                myTerminal.print("Todays Date Is: " + currentime);
-                lock = false;
-            }
-            else if (userInput == "creator") {
-                myTerminal.print("The Apirix Terminal Was Brought To You By Wiggoviich ©");
-                lock = false;
-            }
-            else if (userInput == "errorlog") {
-                var annot = editor.getSession().getAnnotations();
-                console.log(annot);
-
-                if (annot.length > 0) {
-
-                    for (var key in annot) {
-
-                        if (annot.hasOwnProperty(key)) {
-                            var rownr = annot[key].row + 1;
-                            myTerminal.print(annot[key].text + "on line " + " " + rownr);
-                            lock = false;
-                        }
-                    }
-                }
-                else {
-                    myTerminal.print("There Are No Error At The Moment!");
-                    lock = false
-                }
-            }
-            else if (userInput == "theme") {
-
-
-                myTerminal.print("black");
-                myTerminal.print("white");
-                myTerminal.print("bluegray");                
-
-                myTerminal.input("", function (userInput2) {    
-
-                    if (userInput2 == "black") {
-                        black();
-                        myTerminal.print("You Choosed Theme Black")
-                        lock = false;
-                    }
-
-                    else if (userInput2 == "white") {
-                        white();
-                        myTerminal.print("You Choosed Theme White")
-                        lock = false;
-                    }
-                    else if (userInput2 == "bluegray") {
-                        grayblue();
-                        myTerminal.print("You Choosed Theme Bluegray")
-                        lock = false;
-                    }
-                    else{
-                        myTerminal.print("There Are No Theme Called That!")
-                        lock = false;
-                    }
-
-                    
-                    if (lock == false) {
-                        lock = true;
-                        myfunction();
-                    }
-
-
-                });
-               
-                
-            }
-            else if (userInput == "clear") {
-                myTerminal.clear();
-                myTerminal.print("*********** APIRIX Terminal V2 ***********")
-                myTerminal.print("The commands are: | date | creator | errorlog | theme | clear |");
-                lock = false;
-            }
-            
-               
-                
-            
-            else {
-                myTerminal.print("There Is No Such Command,Try Another One");
-                lock = false;
-            }
-            if (lock == false) {
-                lock = true;
-                myfunction();
-            }
-        })
-    }
-    myfunction();
-    myTerminal.setBackgroundColor("#000000")
-    myTerminal.setTextColor("#00ff00")
-    myTerminal.setWidth("100%")
-    myTerminal.setHeight("140px");
-    myTerminal.setscrollY("auto");
-    myTerminal.blinkingCursor(true)
-
-    $("#term").append(myTerminal.html)
-    $("#term").css({
-        'word-break': 'break-word'
-    });
-
-    </script>
+   
+<script src="~/myjs/loadTheTerminal.js"></script>
 
 
 
