changed a few sentences only. nothing major.

--- a/WebApplication1/WebApplication1/Views/Home/About.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/About.cshtml
@@ -84,10 +84,10 @@
         <p class="spanCommandP"><span title="Revert the full screen editor into normal size" id="rev1" class="spanpointer">Window Mode</span></p>
         <p class="spanCommandP"><span title="Gives the background a dark color" id="b1" class="spanpointer">Dark background</span></p>
         <p class="spanCommandP"><span title="Gives the background a white color" id="w1" class="spanpointer">White background</span></p>
-        <p class="spanCommandP"><span title="Gives the background a grayish color" id="gb1" class="spanpointer">Lightgray background</span></p>
-        <p class="spanCommandP"><span title="Editor resolution 600px x 450px" id="res1" class="spanpointer">600 x 450 Resolution</span></p>
-        <p class="spanCommandP"><span title="Editor resolution 900px x 600px" id="res2" class="spanpointer">900 x 600 Resolution</span></p>
-        <p class="spanCommandP"><span title="Editor resolution 1200px x 800px" id="res3" class="spanpointer">1200 x 800 Resolution</span></p>
+        <p class="spanCommandP"><span title="Gives the background a lightgray color" id="gb1" class="spanpointer">Lightgray background</span></p>
+        <p class="spanCommandP"><span title="Editor resolution w600px h450px" id="res1" class="spanpointer">600 x 450 Resolution</span></p>
+        <p class="spanCommandP"><span title="Editor resolution w900px h600px" id="res2" class="spanpointer">900 x 600 Resolution</span></p>
+        <p class="spanCommandP"><span title="Editor resolution w1200px h800px" id="res3" class="spanpointer">1200 x 800 Resolution</span></p>
         <p class="spanCommandP"><span title="Changes editor language to HTML" id="html1" class="spanpointer">HTML</span></p>
         <p class="spanCommandP"><span title="Changes editor language to CSS" id="css1" class="spanpointer">CSS</span></p>
         <p class="spanCommandP"><span title="Changes editor language to JavaScript" id="js1" class="spanpointer">JavaScript</span></p>
