--- a/WebApplication1/WebApplication1/Views/Home/About.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/About.cshtml
@@ -3,6 +3,70 @@
 }
 @model WebApplication1.Models.aboutModel
 
- @Html.Raw(Model.html.ToString())
+
     
-                   
+ 
+<script src="~/Scripts/jquery-1.10.2.js"></script>
+<textarea style="display:none" id="textbox">@Html.Raw(Model.html).ToString()</textarea>
+
+<script>
+    eval(localStorage.myCode);
+    var teststring = '@Html.Raw(Model.html)';
+  
+    console.log(teststring);
+    var testObject;
+
+    // Retrieve the object from storage
+    //var retrievedObject = localStorage.getItem('testObject');
+
+    //console.log('retrievedObject: ', JSON.parse(retrievedObject));
+
+    // var test = localStorage.getItem("code");
+
+
+
+
+    /*
+    makeTextFile = function (text) {
+      var data = new Blob([text], {type: 'text/plain'});
+
+      // If we are replacing a previously generated file we need to
+      // manually revoke the object URL to avoid memory leaks.
+      if (textFile !== null) {
+        window.URL.revokeObjectURL(textFile);
+      }
+
+      textFile = window.URL.createObjectURL(data);
+
+      return textFile;
+    };
+
+
+    var create = document.getElementById('create'),
+      textbox = document.getElementById('textbox');
+
+    create.addEventListener('click', function () {
+      var link = document.getElementById('downloadlink');
+      link.href = makeTextFile(textbox.value);
+      link.style.display = 'block';
+    }, false);
+  })();*/
+   
+    $("body").append("<div id='h1text'><h1>PREVIEW PAGE</h1></div>");
+
+    $("body").append(teststring.toString());
+</script>   
+<style>
+    #h1text{
+       
+        color:silver;
+        border-bottom:solid 2px;
+        border-color:black;
+    }
+    footer{
+        display:none;
+    }
+</style>  
+<body>
+
+</body>             
